# dm-lab-benchmark-suite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py  __init__.py
configs/: default.yaml
deliverables/: DM-Lab-Group-Project.pptx
docs/plans/: 2026-03-03-dm-lab-design.md  2026-03-03-dm-lab-implementation-plan.md
reports/: final_report.md
scripts/: build_presentation.py  dev.ps1  dev.sh  test.ps1  test.sh
src/dm_lab/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/dm_lab/data/: __init__.py  io.py  registry.py
src/dm_lab/eval/: __init__.py  summary.py
src/dm_lab/report/: __init__.py  io.py
src/dm_lab/tasks/: __init__.py  anomaly.py  association.py  classification.py  clustering.py
tests/: test_anomaly.py  test_association.py  test_classification.py  test_cli_run.py  test_cli_smoke.py  test_clustering.py  test_config.py  test_dashboard_import.py  test_data_registry.py  test_pipeline_smoke.py  test_report_generation.py  test_reproducibility.py
